# bapsf-eigsolver

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: test.yml
bapsf-eigsolver/: BOUTppmath.py  eigmath.py  eigsolver.py  eigsolver_4var.py  hdf5tools.py  misctools.py  profiles.py
bapsf-eigsolver/example/: drift.py  drift_notemp.py  param_pass.py
bapsf_eigsolver/: SymbolicEq.py  __init__.py  eigsolver.py  eigsolver_4var.py  eigsolver_te.py  profiles.py
bapsf_eigsolver/example/: Conor_NovRuns.py  drift.py  drift_4var.py  drift_te.py  interchange.py
bapsf_eigsolver/sym_eqns/: __init__.py  base.py  brag_4var.py  brag_temperature.py  braginskii.py
docs/: Makefile  conf.py  index.rst  make.bat
docs/_static/: bapsf_overrides.css
docs/src/: bapsf_eigsolver.BOUTppmath.rst  bapsf_eigsolver.eigsolver.rst  bapsf_eigsolver.misctools.rst  bapsf_eigsolver.profiles.rst  bapsf_eigsolver.rst
requirements/: docs.txt  extras.txt  install.txt  tests.txt
